<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage_types"
        android:title="@string/action_manage_types"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage_containers"
        android:title="@string/action_manage_containers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
