<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/action_duplicate" />
    <item
        android:id="@+id/action_mark_opened"
        android:icon="@drawable/ic_mark_opened"
        android:title="@string/action_mark_opened" />
    <item
        android:id="@+id/action_set_quantity_zero"
        android:icon="@drawable/ic_quantity_zero"
        android:title="@string/action_set_quantity_zero" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete" />
</menu>
